modifications for plots and data

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ ode-solver-simulation/src/ODE_tseries.png
 malaria_model/plots
 malaria_model/ode-solver-simulation/src/__pycache__
 .qodo
+/home/lunaditraverso45/malaria_model/.venv
+/home/lunaditraverso45/malaria_model/ode-solver-simulation/src/__pycache__
