modificaciones a la estructura del proyecto

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-ode-solver-simulation/src/ODE_tseries.png
+src/ODE_tseries.png
 malaria_model/plots
 malaria_model/ode-solver-simulation/src/__pycache__
 .qodo
