--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 src/ODE_tseries.png
 malaria_model/plots
-malaria_model/ode-solver-simulation/src/__pycache__
+malaria_model/data
+malaria_model/__pycache__
 .qodo
 /home/lunaditraverso45/malaria_model/.venv
-/home/lunaditraverso45/malaria_model/ode-solver-simulation/src/__pycache__
