--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ malaria_model/data
 malaria_model/__pycache__
 .qodo
 /home/lunaditraverso45/malaria_model/.venv
+/home/lunaditraverso45/malaria_model/src/__pycache__
